--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,20 @@ server:
   servlet:
     context-path: /demo
 
-## jsp
 spring:
   mvc:
     view:
       prefix: /WEB-INF/view/
       suffix: .jsp
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/springboot_demo
+    username: root
+    password: 123456
+
+mybatis:
+  mapper-locations: classpath:/mybatis/mapper/*Mapper.xml
+
+logging:
+  level:
+    org.wl.demo.mapper.*: debug
